tests/NormalTests/paczka1/fuzzy1/65969022.err
Error in line 4: YTomNUj A395 54,6
Error in line 8: YTomNUj S666 57,1
Error in line 16: 7KME6JRQ27 S666 96,5
Error in line 29: A34 A395 29,1
Error in line 28: hJYJo S666 17,4
Error in line 31: CQ1C S666 17,7
Error in line 34: CQ1C A395 9,9
